SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/Salesforce_Days_Credential__c.object-meta.xml
<CustomObject>
    <label>Salesforce Days Credential</label>
    <nameField>
        <displayFormat>SFDC-{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Days Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>