SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/fields/Credential_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Credential_Obtained__c</fullName>
    <label>Credential Obtained</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credential</valueSetName>
    </valueSet>
</CustomField>