SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/fields/Credential_Obtained_Date__c.field-meta.xml
<CustomField>
    <fullName>Credential_Obtained_Date__c</fullName>
    <label>Credential Obtained Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>