SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/fields/Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>Credential_Type__c</fullName>
    <label>Credential Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credential_Type</valueSetName>
    </valueSet>
</CustomField>