SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Resources__c</referenceTo>
    <relationshipLabel>Salesforce Days Credentials</relationshipLabel>
    <relationshipName>Salesforce_Days_Credentials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>