SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <label>Reward</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFD_Reward</valueSetName>
    </valueSet>
</CustomField>