SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/fields/Reward_Allocated_Date__c.field-meta.xml
<CustomField>
    <fullName>Reward_Allocated_Date__c</fullName>
    <label>Reward Allocated Date</label>
    <type>Date</type>
</CustomField>