SFPracticeApp/main/default/objects/Salesforce_Days_Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Credential_Obtained__c</columns>
    <columns>Credential_Obtained_Date__c</columns>
    <columns>Credential_Type__c</columns>
    <columns>Reward__c</columns>
    <columns>Reward_Allocated_Date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>